# egui-screensaver-mystify

./: Cargo.toml
.github/workflows/: ci.yml  deploy.yml
assets/: index.html  manifest.json  sw.js
src/: lib.rs
