[package]
name = "egui-screensaver-mystify"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
description = "Mystify screensaver for egui — bouncing quadrilaterals with colour-cycling trails"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cecton/egui-screensaver-mystify"
homepage = "https://cecton.github.io/egui-screensaver-mystify"
documentation = "https://docs.rs/egui-screensaver-mystify"
keywords = ["egui", "screensaver", "mystify", "animation", "wasm"]
categories = ["gui", "graphics", "wasm", "visualization"]

[dependencies]
egui = { version = "0.34", default-features = false }

[dev-dependencies]
xtask-wasm = { version = "0.6.2", features = ["run-example", "wasm-opt"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "web_screen_reader", "accesskit"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }

[workspace]
members = ["."]
resolver = "2"
